--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -18,7 +18,7 @@
         </p>
         <p><a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a></p>
         <p>My LinkedIn Profile
-            <a href="https://www.linkedin.com/in/taylorjhuang/">
+            <a href="https://www.linkedin.com/in/taylorjhuang/">target="_blank"
                 <img src ="" alt="LinkedIn Logo">
                 <a href="https://www.linkedin.com/in/taylorjhuang/"></a><img src="../images/LI-In-Bug.png" alt ="LinkedIn Logo">
         </a>
