--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -17,9 +17,8 @@
             Syracuse, NY 13210
         </p>
         <p><a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a></p>
-        <p>My LinkedIn Profile
+        <p><a href="https://www.linkedin.com/in/taylorjhuang/"></a>My LinkedIn Profile
             <a href="https://www.linkedin.com/in/taylorjhuang/">target="_blank"
-                <img src ="" alt="LinkedIn Logo">
                 <a href="https://www.linkedin.com/in/taylorjhuang/"></a><img src="../images/LI-In-Bug.png" alt ="LinkedIn Logo">
         </a>
 
