--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -17,7 +17,7 @@
             Syracuse, NY 13210
         </p>
         <p><a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a></p>
-        <p><a href="https://www.linkedin.com/in/taylorjhuang/"></a>My LinkedIn Profile</a>
+        <p><a href="https://www.linkedin.com/in/taylorjhuang/"></a>My LinkedIn Profile
         </p>
             <a href="https://www.linkedin.com/in/taylorjhuang/"></a>
                 <img src="../images/LI-In-Bug.png" 
