--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -21,7 +21,7 @@
         </p>
         <p>
             <a href="https://www.linkedin.com/in/taylorjhuang/">
-                <img src="../images/LI-In-Bug.png"
+                <img src="../images/LI-In-Bug.png" alt ="LinkedIn Logo"
                 
             >
             </a></p>
