--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -9,7 +9,7 @@
         </head>
         <body>
             <table>
-                <caption>My Skills</caption>
+                <caption>My really cool Skills</caption>
                 <tr>
                     <th>Technical Skills</th>
                     <th>Editorial Skills</th>
@@ -38,7 +38,7 @@
                 <tr>
                     <td>HTML</td>
                     <td>Copy Editing</td>
-                    <td>Introduction to Database Management Systems/td>
+                    <td>Introduction to Database Management Systems</td>
                     </tr>
                 <tr>
                     <td>Docker</td>
