--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -8,6 +8,7 @@
             td{border: 1px solid black;}
         </style>
         </head>
+        <tr class="evenrow"></tr>
         <body>
             <table>
                 <caption>My really cool Skills</caption>
