--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -8,7 +8,7 @@
             td{border: 1px solid black;}
         </style>
         </head>
-        <tr class="evenrow"></tr>
+    
         <body>
             <table>
                 <caption>My really cool Skills</caption>
@@ -17,7 +17,7 @@
                     <th>Editorial Skills</th>
                     <th>Relevant Coursework</th>
                 </tr>
-                <tr>
+                <tr class="evenrow">
                     <td>SQL</td>
                     <td>AP Style</td>
                     <td>Application Programming</td>
@@ -27,7 +27,7 @@
                 <td>Social Media Writing</td>
                 <td>Managing Information Systems Projects></td>
                 </tr>
-                <tr>
+                <tr class="evenrow"></tr>
                 <td>IP/TCP Protocol</td>
                 <td>Video Editing and Production</td>
                 <td>Computer Networking</td>
@@ -37,7 +37,7 @@
                     <td>Blogging</td>
                     <td>Communications Law</td>
                     </tr>
-                <tr>
+                <tr class="evenrow"></tr>
                     <td>HTML</td>
                     <td>Copy Editing</td>
                     <td>Introduction to Database Management Systems</td>
@@ -47,7 +47,7 @@
                     <td>Public Relations</td>
                     <td>Data in Society</td>
                     </tr>
-                <tr>
+                <tr class="evenrow"></tr>
                     <td>JavaScript</td>
                     <td>Magazine Business</td>
                     <td>Magazine Business and Ethics</td>
@@ -57,7 +57,7 @@
                             <td>Public Speaking</td>
                             <td>Social Psychology</td>
                             </tr>
-                <tr>
+                <tr class="evenrow"></tr>
                                 <td>Multimedia Storytelling</td>
                                 <td>Keynote</td>
                                 <td>Social Media in the Organization</td>
