--- a/lab06/skills.html
+++ b/lab06/skills.html
@@ -25,7 +25,7 @@
                 <tr>
                 <td>Excel (Pivot Tables)</td>
                 <td>Social Media Writing</td>
-                <td>Managing Information Systems Projects></td>
+                <td>Managing Information Systems Projects</td>
                 </tr>
                 <tr class="evenrow">
                     <td>IP/TCP Protocol</td>
