--- a/lecturenotes/week7notes.html
+++ b/lecturenotes/week7notes.html
@@ -10,5 +10,8 @@
 <body>
     <a href="http:/www.google.com">Google</a>
     <a href="http:/www.amazon.com">Amazon</a>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis doloribus rem modi ipsum suscipit. Iusto iure nihil reiciendis quos libero, voluptatum, ducimus aperiam molestias maxime est praesentium ullam aliquid facere.
+        
+    </P>
 </body>
 </html>
