--- a/lecturenotes/week7notes.html
+++ b/lecturenotes/week7notes.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -10,8 +10,10 @@
 <body>
     <a href="http:/www.google.com">Google</a>
     <a href="http:/www.amazon.com">Amazon</a>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis doloribus rem modi ipsum suscipit. Iusto iure nihil reiciendis quos libero, voluptatum, ducimus aperiam molestias maxime est praesentium ullam aliquid facere.
-        
-    </P>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis doloribus rem modi ipsum suscipit. Iusto iure nihil reiciendis quos libero, voluptatum, ducimus aperiam molestias maxime est praesentium ullam aliquid facere.
+    </p>
+    <p class="second">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate dolorem, obcaecati laudantium soluta debitis ullam cumque a sunt amet consequuntur, aperiam beatae, qui eaque molestiae eligendi eum. Optio, perferendis corrupti.
+    </p>
 </body>
 </html>
