--- a/lecturenotes/week7submission.html
+++ b/lecturenotes/week7submission.html
@@ -11,7 +11,7 @@
     <p>
         I bleed orange.
     </p>
-    <p>
+    <p class="second">
         <img src ="" alt="otto from syracuse">
         <img src="../images/otto.jpg" alt ="otto from syracuse">
     </p>
