--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -8,8 +8,8 @@
 
     <body>
         <nav>
-            <a href="index.html">Home | </a> |
-            <a href="skills.html">Skills | </a> |
+            <a href="index.html">Home</a> |
+            <a href="skills.html">Skills </a> |
             <a href="contact.html">Contact</a>
         </nav>
 
