--- a/lab07/index.html
+++ b/lab07/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html><lang></lang>
     <head>
         <meta charset="utf-8">
         <title>Taylor Huang - Bio</title>
@@ -28,6 +28,7 @@
         <p>
             &#169; 2022
         </p>
+    </body>
 
         <h3>Skills</h3>
         <li>Python</li>
@@ -35,5 +36,4 @@
         <li>SPSS</li>
         <li>Computer Networking</li>
 
-    </body>
 </html>
