--- a/lab07/index.html
+++ b/lab07/index.html
@@ -29,11 +29,12 @@
             &#169; 2022
         </p>
 
-        <h3>Skills</h3>
+    </body><h3>Skills</h3>
+    <ol>
         <li>Python</li>
         <li>Adobe Creative Cloud</li>
         <li>SPSS</li>
         <li>Computer Networking</li>
+    </ol>
 
-    </body>
 </html>
