--- a/lab07/index.html
+++ b/lab07/index.html
@@ -29,12 +29,12 @@
             &#169; 2022
         </p>
 
-    </body><h3>Skills</h3>
+    <h3>Skills</h3>
     <ol>
         <ol>Python</ol>
         <ol>Adobe Creative Cloud</ol>
         <ol>SPSS</ol>
         <ol>Computer Networking</ol>
     </ol>
-
+    </body>
 </html>
