--- a/lab07/index.html
+++ b/lab07/index.html
@@ -28,8 +28,8 @@
         <p>
             &#169; 2022
         </p>
-    </body>
-    <h3>Skills</h3>
+        
+    </body><h3>Skills</h3>
     <ol>
         <ol>Python</ol>
         <ol>Adobe Creative Cloud</ol>
