--- a/lab07/index.html
+++ b/lab07/index.html
@@ -30,11 +30,11 @@
         </p>
 
     </body><h3>Skills</h3>
-
-        <ol>Python</ol>
-        <ol>Adobe Creative Cloud</ol>
-        <ol>SPSS</ol>
-        <ol>Computer Networking</ol>
-
+<ol>
+        <li>Python</li>
+        <li>Adobe Creative Cloud</li>
+        <li>SPSS</li>
+        <li>Computer Networking</li>
+    </ol>
 
 </html>
