--- a/lab07/index.html
+++ b/lab07/index.html
@@ -30,11 +30,10 @@
         </p>
 
     </body><h3>Skills</h3>
-<ol>
-        <li>Python</li>
-        <li>Adobe Creative Cloud</li>
-        <li>SPSS</li>
-        <li>Computer Networking</li>
-    </ol>
 
+    <ol><li>Python</li></ol>
+       <ol><li>Adobe Creative Cloud</li></ol> 
+       <ol><li>SPSS</li></ol> 
+       <ol><li>Computer Networking</li></ol> 
+ 
 </html>
