--- a/lab07/index.html
+++ b/lab07/index.html
@@ -29,7 +29,7 @@
             &#169; 2022
         </p>
 
-    </body><h3>Skills</h3>
+    <h3>Skills</h3>
 
     <ol><li>Python</li></ol>
        <ol><li>Adobe Creative Cloud</li></ol> 
