--- a/lab07/index.html
+++ b/lab07/index.html
@@ -31,9 +31,10 @@
 
     <h3>Skills</h3>
 
-    <ol><li>Python</li></ol>
-       <ol><li>Adobe Creative Cloud</li></ol> 
-       <ol><li>SPSS</li></ol> 
-       <ol><li>Computer Networking</li></ol> 
+    <ul><li>Python</li></ul>
+       <ul><li>Adobe Creative Cloud</li></ul> 
+       <ul><li>SPSS</li></ul> 
+       <ul><li>Computer Networking</li></ul> 
  
+       </body>
 </html>
