--- a/lab08/index.html
+++ b/lab08/index.html
@@ -14,7 +14,7 @@
         </nav>
         <h1>Taylor Huang's Biography</h1>
 
-        <header><img src="../images/banner.png"></header>
+        <header><img src="../images/banner.png" alt ="banner"></header>
         <main>
         <p> 
             My name is Taylor Huang. I am dual majoring in Information Management and Technology and Magazine Journalism. I am really interested in making technology more digestible through writing and data analytics and helping equip others with tools in this ever-changing digital world. 
