--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -23,6 +23,12 @@
         <p>
             Syracuse, NY 13210
         </p>
+
+        <div>
+            <div></div>
+            <div></div>
+        </div>
+
         <p><a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a></p>
         <p><a href="https://www.linkedin.com/in/taylorjhuang/">My LinkedIn Profile</a>
         </p>
@@ -31,10 +37,16 @@
                 <img src="../images/LI-In-Bug.png" alt ="LinkedIn Logo"
                 
             >
+
             </a></p>
         <p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.9531463262865!2d-76.13221638482254!3d43.04241729972846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f30af7181d95%3A0x58d5a4c398db10ad!2s417%20Comstock%20Ave%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1663252095780!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
         </p>
+
+        <div>
+            <div></div>
+            <div></div>
+        </div>
 
         <h1>Let's be friends!</h1>
         <form method="post" action="https://formspree.io/f/myyvwzkk">
