--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -14,8 +14,9 @@
         </nav>
 
         <h1>Contact</h1>
+    <div>
+            <p> 
         <div>
-            <p> <div>
             Taylor Huang
         </p>
         <p>
@@ -25,7 +26,7 @@
             Syracuse, NY 13210
         </p>
         </div>
-        <div>
+    </div>
 
         <p><a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a></p>
         <p><a href="https://www.linkedin.com/in/taylorjhuang/">My LinkedIn Profile</a>
