--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -18,24 +18,16 @@
         <div>
             <p> 
             Taylor Huang
-        </p>
-        <p>
             417 Comstock Avenue 
-            </p>
-        <p>
             Syracuse, NY 13210
-        </p>
+            </p>
         </div>
         <div>
-        <p><a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a></p>
-        <p><a href="https://www.linkedin.com/in/taylorjhuang/">My LinkedIn Profile</a>
-        </p>
-        <p>
+        <p><a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a>
+        <a href="https://www.linkedin.com/in/taylorjhuang/">My LinkedIn Profile</a>
             <a href="https://www.linkedin.com/in/taylorjhuang/">
                 <img src="../images/LI-In-Bug.png" alt ="LinkedIn Logo"
-                
             >
-
             </a></p>
         </div>
     </div>
