--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -14,16 +14,18 @@
         </nav>
 
         <h1>Contact</h1>
+    <div class="row1">
     <div>
         <div>
             <p> 
-            Taylor Huang
-            417 Comstock Avenue 
+            Taylor Huang <br>
+            417 Comstock Avenue <br>
             Syracuse, NY 13210
             </p>
         </div>
         <div>
-        <p><a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a>
+        <p>
+            <a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a>
         <a href="https://www.linkedin.com/in/taylorjhuang/">My LinkedIn Profile</a>
             <a href="https://www.linkedin.com/in/taylorjhuang/">
                 <img src="../images/LI-In-Bug.png" alt ="LinkedIn Logo"
