--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -25,8 +25,8 @@
         </div>
         <div>
         <p>
-            <a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a>
-        <a href="https://www.linkedin.com/in/taylorjhuang/">My LinkedIn Profile</a>
+            <a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a><br>
+        <a href="https://www.linkedin.com/in/taylorjhuang/">My LinkedIn Profile</a><br>
             <a href="https://www.linkedin.com/in/taylorjhuang/">
                 <img src="../images/LI-In-Bug.png" alt ="LinkedIn Logo"
             >
