--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -2,8 +2,21 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <style>
+            body {background-color: #999999;}
+            img {width: 150px;}
+           /* footer colors background is #000e54, text is #c9cbd0 */
+           .row1, .row2 /* group selecters work with classes too */ {
+            display: flex;
+           }
+           .row1_div {
+                flex: 1; 
+           }
+        </style>
+
         <title>Contact Info</title>
         <link rel="stylesheet" href="styles.css">
+    
     </head>
 
     <body>
