--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -12,6 +12,9 @@
            .row1_div {
                 flex: 1; 
            }
+            div {
+            border: 1px solid #ff0000;
+           }
         </style>
 
         <title>Contact Info</title>
