--- a/lab08/contact.html
+++ b/lab08/contact.html
@@ -15,6 +15,7 @@
             div {
             border: 1px solid #ff0000;
            }
+
         </style>
 
         <title>Contact Info</title>
@@ -37,17 +38,14 @@
             Taylor Huang<br>
             417 Comstock Avenue<br>
             Syracuse, NY 13210
-            </p>
-        </div>
-        <div>
-        <p>
+        </p></div>
+        <div><p>
             <a href="mailto:thuang21@syr.edu">thuang21@syr.edu</a><br>
         <a href="https://www.linkedin.com/in/taylorjhuang/">My LinkedIn Profile</a><br>
             <a href="https://www.linkedin.com/in/taylorjhuang/">
                 <img src="../images/LI-In-Bug.png" alt ="LinkedIn Logo"
             >
-            </a></p>
-        </div>
+            </a></p></div>
     </div>
 
     <div class="row2">
