--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="styles.css">
         <style>
             td{border: 1px solid black;}
+            h1{text-align: center;}
+            .skillz {display: flex; border-color: #000000; margin: 80px; margin-top: 10px;
+            justify-content: space-around;}
+            .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 20px;}
+            .sentence {display: flex; margin: 80px}
+
         </style>
         </head>
     
@@ -16,7 +22,10 @@
                 <a href="contact.html">Contact</a>
             </nav>
             <table>
-                <caption>My really cool Skills</caption>
+                <h1>My really cool Skills</h1>
+                <div class="sentence">
+                <p> As a information management and journalism student, I've learned a combination of technical and editorial skill through my past internships and coursework. I hope to use this unique skillset to tell stories through digital mediums and make technology more accessible.  </p></div>
+                <!--
                 <tr>
                     <th>Technical Skills</th>
                     <th>Editorial Skills</th>
@@ -68,5 +77,38 @@
                                 <td>Social Media in the Organization</td>
                                 </tr>
             </table>
+            -->
+            <p>
+            <div class="skillz">
+            <div>    <p>
+                <img src="../images/table-solid.svg" alt ="excel" width="14" height="26"><br>
+                Excel (Pivot Tables)<br>
+            </p></div>
+            <div>      <p>
+                <img src="../images/code-solid.svg" alt ="code" width="14" height="26"><br>
+                HTML 
+            </p></div>
+            <div>      <p>
+                <img src="../images/scale-balanced-solid.svg" alt ="scale" width="14" height="26"><br>
+                Communications Law
+            </p></div>
+            <div>      <p>
+                <img src="../images/video-solid.svg" alt ="video" width="14" height="26"><br>
+                Multimedia Storytelling
+           </p></div>
+            <div>      <p>
+                <img src="../images/js.svg" alt ="js" width="14" height="26"><br>
+                JavaScript
+            </p></div>
+        <p>
+        <div class="row2">
+        <div>    <p>
+        <h2>Other Skills</h2><br>
+                Salesforce (CRM)<br>
+                Copy Editing<br>
+                TCP/IP Protocol<br>
+                SQL<br>
+                AP Style
+        </div>    </p>
         </body>
     </html>
