--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -46,6 +46,7 @@
                 <img src="../images/js.svg" alt ="js" width="14" height="26"><br>
                 JavaScript
             </p></div>
+            </div>
         <p>
         <div class="row2">
         <div>    <p>
@@ -55,6 +56,7 @@
                 TCP/IP Protocol<br>
                 SQL<br>
                 AP Style
-        </div>    </p>
+        </p></div>
+        </div>
         </body>
     </html>
