--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -49,14 +49,14 @@
             </div>
         <p>
         <div class="row2">
-        <div>    <p>
+        <div>
         <h2>Other Skills</h2><br>
                 Salesforce (CRM)<br>
                 Copy Editing<br>
                 TCP/IP Protocol<br>
                 SQL<br>
                 AP Style
-        </p></div>
+        </div>
         </div>
         </body>
     </html>
