--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -56,7 +56,7 @@
                 TCP/IP Protocol<br>
                 SQL<br>
                 AP Style
-            </div>
+        </p></div>
         </div>
         </body>
     </html>
