--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -45,9 +45,7 @@
             <div>      <p>
                 <img src="../images/js.svg" alt ="js" width="14" height="26"><br>
                 JavaScript
-            </p></div>
-            </div>
-        <p>
+        <p></div>
         <div class="row2">
         <div>     <p>
         <h2>Other Skills</h2><br>
@@ -56,7 +54,7 @@
                 TCP/IP Protocol<br>
                 SQL<br>
                 AP Style
-        </p></div>
+        </div>
         </div>
         </body>
     </html>
