--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -48,12 +48,13 @@
         </p></div>
         </div>
         <div class="row2">
+        <div>      <p>
         <h2>Other Skills</h2><br>
                 Salesforce (CRM)<br>
                 Copy Editing<br>
                 TCP/IP Protocol<br>
                 SQL<br>
                 AP Style
-        </div>
+        </p></div>
         </body>
     </html>
