--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -55,7 +55,7 @@
                 TCP/IP Protocol<br>
                 SQL<br>
                 AP Style
-        </p></div>
+        </div>
         </div>
         </body>
     </html>
