--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -44,9 +44,10 @@
            </p></div>
             <div>      <p>
                 <img src="../images/js.svg" alt ="js" width="14" height="26"><br>
-                JavaScript
-        </p></div>
+                JavaScript</div>
+                
         </div>
+
         <div class="row2">
         <div>      <p>
         <h2>Other Skills</h2><br>
