--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -9,7 +9,7 @@
             h1{text-align: center;}
             .skillz {display: flex; border-color: #000000; margin: 80px; margin-top: 10px;
             justify-content: space-around;}
-            .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 20px;}
+            .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 20px; flex-basis: 60%; ;}
             .sentence {display: flex; margin: 80px}
 
         </style>
