--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -11,6 +11,8 @@
             justify-content: space-around;}
             .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 20px;}
             .sentence {display: flex; margin: 80px}
+            .heading{display: flex;
+            justify-content: center;}
 
         </style>
         </head>
@@ -22,11 +24,9 @@
                 <a href="contact.html">Contact</a>
             </nav>
                 <h1>My really cool Skills</h1>
-                <div class="sentence">
-                <p> As a information management and journalism student, I've learned a combination of technical and editorial skill through my past internships and coursework. I hope to use this unique skillset to tell stories through digital mediums and make technology more accessible.  </p></div>
-            <p>
+                <div class="sentence"><p> As a information management and journalism student, I've learned a combination of technical and editorial skill through my past internships and coursework. I hope to use this unique skillset to tell stories through digital mediums and make technology more accessible.  </p></div>
             <div class="skillz">
-            <div>    <p>
+            <div class="icons">    <p>
                 <img src="../images/table-solid.svg" alt ="excel" width="14" height="26"><br>
                 Excel (Pivot Tables)<br>
             </p></div>
@@ -46,17 +46,16 @@
                 <img src="../images/js.svg" alt ="js" width="14" height="26"><br>
                 JavaScript</div>
                 
-        </div>
-
+            </div>
         <div class="row2">
-        <div>      <p>
-        <h2>Other Skills</h2><br>
+        <div class="heading"> <h2>Other Skills</h2></div>
+        <p>
                 Salesforce (CRM)<br>
                 Copy Editing<br>
                 TCP/IP Protocol<br>
                 SQL<br>
                 AP Style
-        </div>
+            </p>
         </div>
         </body>
     </html>
