--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -6,13 +6,12 @@
         <link rel="stylesheet" href="styles.css">
         <style>
             td{border: 1px solid black;}
-            h1{text-align: center;}
-            .skillz {display: flex; border-color: #000000; margin: 80px; margin-top: 10px;
+            .skillz {display: flex; border-color: #000000; margin: 10px; margin-top: 10px;
             justify-content: space-around;}
-            .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 20px;}
-            .sentence {display: flex; margin: 80px}
-            .heading{display: flex;
-            justify-content: center;}
+            .icons {display: flex; justify-content: space-around; flex: 3; margin-top: 10px}
+            .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
+            .sentence {text-align: center;}
+            .heading {text-align: center;}
 
         </style>
         </head>
@@ -23,31 +22,18 @@
                 <a href="skills.html">Skills</a> |
                 <a href="contact.html">Contact</a>
             </nav>
-                <h1>My really cool Skills</h1>
-                <div class="sentence"><p> As a information management and journalism student, I've learned a combination of technical and editorial skill through my past internships and coursework. I hope to use this unique skillset to tell stories through digital mediums and make technology more accessible.  </p></div>
-            <div class="skillz">
-            <div class="icons">    <p>
-                <img src="../images/table-solid.svg" alt ="excel" width="14" height="26"><br>
-                Excel (Pivot Tables)<br>
-            </p></div>
-            <div>      <p>
-                <img src="../images/code-solid.svg" alt ="code" width="14" height="26"><br>
-                HTML 
-            </p></div>
-            <div>      <p>
-                <img src="../images/scale-balanced-solid.svg" alt ="scale" width="14" height="26"><br>
-                Communications Law
-            </p></div>
-            <div>      <p>
-                <img src="../images/video-solid.svg" alt ="video" width="14" height="26"><br>
-                Multimedia Storytelling
-           </p></div>
-            <div>      <p>
-                <img src="../images/js.svg" alt ="js" width="14" height="26"><br>
-                JavaScript</div>
-                
+    <div class="heading"><h1>My really cool Skills</h1></div>
+    <div class="sentence"><p> As a information management and journalism student, I've learned a combination of technical and editorial skill through my past internships and coursework. I hope to use this unique skillset to tell stories through digital mediums and make technology more accessible.  </p></div>
+    
+    <div class="skillz">
+            <div class="icons"> 
+            <div><img src="../images/table-solid.svg" alt ="excel" width="14" height="26"><br>Excel (Pivot Tables)</div>
+            <div><img src="../images/code-solid.svg" alt ="code" width="14" height="26"><br>HTML</div>
+            <div><img src="../images/scale-balanced-solid.svg" alt ="scale" width="14" height="26"><br>Communications Law</div>
+            <div><img src="../images/video-solid.svg" alt ="video" width="14" height="26"><br>Multimedia Storytelling</div>
+            <div><img src="../images/js.svg" alt ="js" width="14" height="26"><br>JavaScript</div>
             </div>
-        <div class="row2">
+        <aside class="row2">
         <div class="heading"> <h2>Other Skills</h2></div>
         <p>
                 Salesforce (CRM)<br>
@@ -56,6 +42,6 @@
                 SQL<br>
                 AP Style
             </p>
-        </div>
+        </aside>
         </body>
     </html>
