--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -11,7 +11,8 @@
             .icons {display: flex; justify-content: space-around; flex: 3; margin-top: 10px}
             .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
             .sentence {text-align: center;}
-            .heading {text-align: center;}
+            .heading {text-align: left;}
+            .heading1 {text-align: center;}
 
         </style>
         </head>
@@ -22,7 +23,7 @@
                 <a href="skills.html">Skills</a> |
                 <a href="contact.html">Contact</a>
             </nav>
-    <div class="heading"><h1>My really cool Skills</h1></div>
+    <div class="heading1"><h1>My really cool Skills</h1></div>
     <div class="sentence"><p> As a information management and journalism student, I've learned a combination of technical and editorial skill through my past internships and coursework. I hope to use this unique skillset to tell stories through digital mediums and make technology more accessible.  </p></div>
     
     <div class="skillz">
@@ -34,7 +35,7 @@
             <div><img src="../images/js.svg" alt ="js" width="14" height="26"><br>JavaScript</div>
             </div>
         <aside class="row2">
-        <div class="heading"> <h2>Other Skills</h2></div>
+        <div class="heading"><h2>Other Skills</h2>
         <p>
                 Salesforce (CRM)<br>
                 Copy Editing<br>
@@ -42,6 +43,7 @@
                 SQL<br>
                 AP Style
             </p>
+        </div>
         </aside>
         </body>
     </html>
