--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -40,7 +40,7 @@
                 Copy Editing<br>
                 TCP/IP Protocol<br>
                 SQL<br>
-                AP Style
+                AP Style <br>
             </p>
         </div>
         </aside>
