--- a/lab10/index.html
+++ b/lab10/index.html
@@ -19,7 +19,7 @@
         </nav>
         <h1>Taylor Huang's Biography</h1>
 
-        <header><img class="banner" img src="../images/banner.png" alt ="banner"></header>
+        <header><img src="../images/banner.png" alt ="banner" height="800" width="2000"></header>
         <main>
         <p> 
             My name is Taylor Huang. I am dual majoring in Information Management and Technology and Magazine Journalism. I am really interested in making technology more digestible through writing and data analytics and helping equip others with tools in this ever-changing digital world. 
