--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -7,7 +7,7 @@
             img {width: 150px;}
            /* footer colors background is #000e54, text is #c9cbd0 */
            .row1, .row2 {display: flex; background-color: #cce5ff; border-radius: 1em; padding: 20px; margin: 20px;}
-           .row2{flex: wrap}
+           .row2{flex: wrap;}
             .linkedin, .friends {margin: 80px}
         </style>
 
