--- a/project5/technical.html
+++ b/project5/technical.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <nav>
-        <a href="home.html">Home</a> <span>|</span>.
-        <a href="editorial.html">Editorial Work</a> <span>|</span>.
+        <a href="home.html">Home</a> <span>|</span>
+        <a href="editorial.html">Editorial Work</a> <span>|</span>
         <a href="technical.html">Technical Projects</a>
     </nav>
 
