--- a/project5/editorial.html
+++ b/project5/editorial.html
@@ -6,23 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editorial Work</title>
     <style>
+        .nav {float: right;}
         .heading1{display: flex; text-align: left; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .social-links{float: right; margin-right:10px;}
         .mashed{display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .text1{display: flex;float: right; margin-right:10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .odyssey{display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .text2{display: flex;float: right; margin-right:10px;border-radius: 1em; padding: 20px; margin: 20px;}
+        .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
+        .letsconnect{float: left; margin: 150px}
+        .contact{float: center; margin: 150px}
+        .social-links{float: right; margin: 150px}
+        .banner {max-width: 100%}
     </style>
 </head>
 <body>
         <nav>
+        <img class="logo" src="../project/pictures/huangtaylorlogo.png" alt ="logo">
+        <div class="nav">
             <a href="home.html">Home</a> <span>|</span>.
             <a href="editorial.html">Editorial Work</a> <span>|</span>.
             <a href="technical.html">Technical Projects</a>
         </nav>
 
-        <div class="mashed"><a href="https://www.mashed.com"></a><img src="../project/pictures/mashed.png" alt ="mashed" width="150" height="50">
-            <div class="text1">
+        <div class="mashed"><a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50">
+            <div class="text1"></a>
                 <p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p><br>
         </div></div>
 
@@ -31,21 +39,28 @@
                 <p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p><br>
         </div></div>
 
-        <div class="odyssey"><a href="https://www.theodysseyonline.com/user/@taylor_huang"></a><img src="../project/pictures/odyssey.png" alt ="odyssey" width="150" height="50">
+        <div class="odyssey"><a href="https://www.theodysseyonline.com/user/@taylor_huang"><img src="../project/pictures/odyssey.png" alt ="odyssey" width="150" height="150"></a>
             <div class="text2">
                 <p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p><br>
 
         </div></div>
 
-        <footer><h2>Let's Connect!</h2>
+        <footer>
+            <div class="footer">
+            <div class="letsconnect">
+            <h2>Let's Connect!</h2>
+            </div>
+            <div class="contact">
+                    <p><a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com</a><br>
+                    718-913-0894<br>
+                    </div>
             <div class="social-links">
-                <p><a href="mailto:thuang21@syr.edu"></a>taylorjhuang@gmail.com<br>
-                718-913-0894<br>
-                <a href="https://www.linkedin.com/in/taylorjhuang/"><img src="../images/LI-In-Bug.png" alt ="linkedin" width="60" height="50">
-                <img src="../project/pictures/twitter.png" alt ="twitter" width="60" height="50">
-            </div> 
-    
-        </footer>
+                    <a href="https://www.linkedin.com/in/taylorjhuang/"><img src="../images/LI-In-Bug.png" alt ="linkedin" width="60" height="50"></a>
+                    <a href="https://twitter.com/taylorjhuang"><img src="../project/pictures/twitter.png" alt ="twitter" width="60" height="50"></a>
+                </div> 
+                </div>
+        
+            </footer>
 
 
     </body>
