--- a/project5/technical.html
+++ b/project5/technical.html
@@ -6,12 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technical Projects</title>
     <style>
-        .heading1 {display: flex; text-align: left; margin: 10px; margin-top: 10px;}
-        .social-links{float: right; margin-right:10px; }
+        .nav {float: right;}
+        .heading1 {display: flex; text-align: left;}
+        .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
+        .letsconnect{float: left; margin: 150px}
+        .contact{float: center; margin: 150px}
+        .social-links{float: right; margin: 150px}
+        .banner {max-width: 100%}
     </style>
 </head>
 <body>
     <nav>
+    <img class="logo" src="../project/pictures/huangtaylorlogo.png" alt ="logo">
+    <div class="nav">
         <a href="home.html">Home</a> <span>|</span>
         <a href="editorial.html">Editorial Work</a> <span>|</span>
         <a href="technical.html">Technical Projects</a>
@@ -35,15 +42,22 @@
     <h1>Youth Outreach Plan</h1>
     <p>During the summer of 2019, I was an intern for New York State Senator John C. Liu. Working together with my fellow interns, we designed a Youth Outreach Plan to engage young people in the community through social media, events, and merchandise sales. We then used Google Analytics to measure the success of our ideas and pitched our plan to the senator himself.</p><br>
 
-    <footer><h2>Let's Connect!</h2>
+    <footer>
+        <div class="footer">
+        <div class="letsconnect">
+        <h2>Let's Connect!</h2>
+        </div>
+        <div class="contact">
+                <p><a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com<br></a>
+                718-913-0894<br>
+                </div>
         <div class="social-links">
-            <p><a href="mailto:thuang21@syr.edu"></a>taylorjhuang@gmail.com<br>
-            718-913-0894<br>
-            <a href="https://www.linkedin.com/in/taylorjhuang/"><img src="../images/LI-In-Bug.png" alt ="linkedin" width="60" height="50">
-            <img src="../project/pictures/twitter.png" alt ="twitter" width="60" height="50">
-        </div> 
-
-    </footer>
+            <a href="https://www.linkedin.com/in/taylorjhuang/"><img src="../images/LI-In-Bug.png" alt ="linkedin" width="60" height="50"></a>
+            <a href="https://twitter.com/taylorjhuang"><img src="../project/pictures/twitter.png" alt ="twitter" width="60" height="50"></a>
+            </div> 
+            </div>
+    
+        </footer>
 
 
 </body>
