--- a/project5/editorial.html
+++ b/project5/editorial.html
@@ -10,9 +10,10 @@
         .heading1{display: flex; text-align: left; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
         .social-links{float: right; margin-right:10px;}
         .mashed{display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
-        .text1{display: flex;float: right; margin-right:10px;border-radius: 1em; padding: 20px; margin: 20px;}
+        .text1{display: flex; border-radius: 1em; padding: 20px; margin: 20px;}
         .odyssey{display: flex; border-color: #000000; margin: 10px; margin-top: 10px;border-radius: 1em; padding: 20px; margin: 20px;}
-        .text2{display: flex;float: right; margin-right:10px;border-radius: 1em; padding: 20px; margin: 20px;}
+        .editorial{max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
+        .text2{display: flex; border-radius: 1em; padding: 20px; margin: 20px;}
         .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
         .letsconnect{float: left; margin: 150px}
         .contact{float: center; margin: 150px}
@@ -29,14 +30,15 @@
             <a href="technical.html">Technical Projects</a>
         </nav>
 
-        <div class="mashed"><a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50">
-            <div class="text1"></a>
+        <div class="editorial">
+        <div class="mashed"><a href="https://www.mashed.com/author/taylorhuang/"><img src="../project/pictures/mashed.png" alt ="mashed" width="200" height="50"></a>
+            <div class="text1">
                 <p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p><br>
         </div></div>
 
-        <div class="mashed"><a href="https://www.mashed.com"></a><img src="../project/pictures/mashed.png" alt ="mashed" width="150" height="50">
+        <div class="mashed"><a href="https://www.mashed.com"></a><img src="../project/pictures/mashed.png" alt ="mashed" width="150" height="50"></a>
             <div class="text1">
-                <p>I am currently a writer at Mashed.com, an online food publication. I am assigned stories and forward pitches to editors on a regular basis. I have covered a large variety of topics, including Crumbl Cookies’ newest podcast to what Shaq really eats in a day. However, my favorite things to write about include plant-based cooking and food tech!</p><br>
+                <p>I was previously an intern for Her Campus Media, where I worked extensively on Lifestyle and Wellness articles. I also led the publications “Behind the Feed” series for a period, where I organized social media influencers stories.</p><br>
         </div></div>
 
         <div class="odyssey"><a href="https://www.theodysseyonline.com/user/@taylor_huang"><img src="../project/pictures/odyssey.png" alt ="odyssey" width="150" height="150"></a>
@@ -44,6 +46,7 @@
                 <p>During the summer of 2020, I was a Lifestyle Beat Creator for the Odyssey Online. I worked closely with the Lifestyle Editor to create engaging, informative written content for audiences. At the end of this program, I generated upwards of 220,000 views on my content, which consisted of product reviews, listicles, and food items.</p><br>
 
         </div></div>
+        </div>
 
         <footer>
             <div class="footer">
