--- a/project5/editorial.html
+++ b/project5/editorial.html
@@ -16,7 +16,7 @@
         .text2{display: flex; border-radius: 1em; padding: 20px; margin: 20px;}
         .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
         .letsconnect{float: left; margin: 150px}
-        .contact{float: center; margin: 150px}
+        .contact{margin: 150px}
         .social-links{float: right; margin: 150px}
         .banner {max-width: 100%}
     </style>
@@ -25,9 +25,10 @@
         <nav>
         <img class="logo" src="../project/pictures/huangtaylorlogo.png" alt ="logo">
         <div class="nav">
-            <a href="home.html">Home</a> <span>|</span>.
-            <a href="editorial.html">Editorial Work</a> <span>|</span>.
+            <a href="home.html">Home</a> <span>|</span>
+            <a href="editorial.html">Editorial Work</a> <span>|</span>
             <a href="technical.html">Technical Projects</a>
+            </div>
         </nav>
 
         <div class="editorial">
