--- a/project5/home.html
+++ b/project5/home.html
@@ -7,12 +7,14 @@
     <title>Home</title>
     <style>
         .nav {float: right;}
-        .heading1 {display: flex; text-align: left;}
+        .heading1 {float: right; display: flex; text-align: right;}
+        .paragraph {float: right; display: flex; text-align: right;}
         .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
         .letsconnect{float: left; margin: 150px}
         .contact{margin: 150px}
         .social-links{float: right; margin: 150px}
         .banner {max-width: 100%}
+        .blurb {max-width:100%; display: flex; background-color: #cce5ff; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
     </style>
 </head>
 <body>
@@ -24,12 +26,14 @@
         <a href="technical.html">Technical Projects</a>
     </div>
     </nav>
+    <div class ="blurb">
     <header><img class="banner" src="../images/banner.png" alt ="banner"></header>
-    <div class="heading1"><h1>Hi, I'm Taylor.</h1></div>
-    <p> 
+    <div class="heading1"><h1>Hi, I'm Taylor.</h1></div><br>
+    <div class="paragraph">
         In May 2023, I will be earning a dual degree from Syracuse University’s School of Information Studies and S.I. Newhouse School of Public Communications. I am studying information management and technology and magazine journalism, and my education helped shape me into a digital storyteller. I hope to apply both my technical and writing skills to opportunities that will make technology more accessible and digestible for diverse audiences. <br>
         Outside of my work I am a huge foodie and traveler, and I love staying active. Feel free to contact me at <a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com.</a></p>
-        
+    </div>
+    </div>
     <footer>
         <div class="footer">
         <div class="letsconnect">
