--- a/project5/home.html
+++ b/project5/home.html
@@ -28,10 +28,12 @@
     </nav>
     <div class ="blurb">
     <header><img class="banner" src="../images/banner.png" alt ="banner"></header>
+    <div class="row2">
     <div class="heading1"><h1>Hi, I'm Taylor.</h1></div><br>
     <div class="paragraph">
         In May 2023, I will be earning a dual degree from Syracuse University’s School of Information Studies and S.I. Newhouse School of Public Communications. I am studying information management and technology and magazine journalism, and my education helped shape me into a digital storyteller. I hope to apply both my technical and writing skills to opportunities that will make technology more accessible and digestible for diverse audiences. <br>
         Outside of my work I am a huge foodie and traveler, and I love staying active. Feel free to contact me at <a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com.</a></p>
+    </div>
     </div>
     </div>
     <footer>
