--- a/project5/home.html
+++ b/project5/home.html
@@ -8,7 +8,7 @@
     <style>
         .nav {float: right;}
         .heading1 {float: right; display: flex; text-align: right;}
-        .paragraph {float: right; display: flex; text-align: right;}
+       /* .paragraph {float: right; display: flex; text-align: right;}*/
         .footer{max-width:100%; display: flex; border-radius: 1em; padding: 10px; flex: 1; margin: 10px}
         .letsconnect{float: left; margin: 150px}
         .contact{margin: 150px}
@@ -27,14 +27,19 @@
     </div>
     </nav>
     <div class ="blurb">
-    <header><img class="banner" src="../images/banner.png" alt ="banner"></header>
-    <div class="row2">
-    <div class="heading1"><h1>Hi, I'm Taylor.</h1></div><br>
-    <div class="paragraph">
+    <table>
+        <tr>
+        <td style="width: 70%"><header><img class="banner" src="../images/banner.png" alt ="banner"></header></td>
+    <!-- <div class="row2"> -->
+    <td style="padding: 30px">
+             <!-- <div class="heading1"> --><h1>Hi, I'm Taylor.</h1><br>
+        <div class="paragraph">
         In May 2023, I will be earning a dual degree from Syracuse University’s School of Information Studies and S.I. Newhouse School of Public Communications. I am studying information management and technology and magazine journalism, and my education helped shape me into a digital storyteller. I hope to apply both my technical and writing skills to opportunities that will make technology more accessible and digestible for diverse audiences. <br>
         Outside of my work I am a huge foodie and traveler, and I love staying active. Feel free to contact me at <a href="mailto:taylorjhuang@gmail.com">taylorjhuang@gmail.com.</a>
-    </div>
-    </div>
+    </div></td>
+     <!-- </div> -->
+    </tr>
+    </table>
     </div>
     <footer>
         <div class="footer">
